fix(angular/datepicker): avoid calendar being cut off on small screens (#1869)
If the screen is too small to show the calendar above or below the date input, display it centered and remove the arrow pointing to the input.

Closes #1819

--- a/src/angular/datepicker/datepicker-content/datepicker-content.scss
+++ b/src/angular/datepicker/datepicker-content/datepicker-content.scss
@@ -4,6 +4,8 @@
   position: relative;
   top: var(--sbb-datepicker-content-offset);
   font-size: var(--sbb-font-size);
+  height: var(--sbb-datepicker-calendar-height);
+  width: var(--sbb-datepicker-calendar-width);
 
   .sbb-datepicker-panel-above & {
     top: auto;
@@ -44,6 +46,11 @@
       clip-path: var(--sbb-box-shadow-arrow-clip-path);
       box-shadow: var(--sbb-box-shadow-arrow-width) var(--sbb-box-shadow-arrow-width) 0
         var(--sbb-box-shadow-arrow-width) var(--sbb-box-shadow-color);
+    }
+
+    // Hide arrow if panel is vertically centered
+    .sbb-datepicker-panel-centered & {
+      display: none;
     }
   }
 
